--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
 
     <script>
         const products = [
-            { id: "bo_ham", name: "Cơm nắm bò hầm 🥩", price: 23000 },
-            { id: "ca_hoi", name: "Cơm nắm cá hồi 🍣", price: 22000 },
-            { id: "ca_ngu", name: "Cơm nắm cá ngừ 🐟", price: 20000 },
-            { id: "ga_mayo", name: "Cơm nắm gà mayo 🍗", price: 18000 },
-            { id: "ga_phomai", name: "Cơm nắm gà phô mai 🍗🧀", price: 22000 },
-            { id: "trung_cha_bong", name: "Cơm nắm trứng chà bông 🥚", price: 16000 }
+            { id: 'ca-hoi', name: 'Cơm nắm cá hồi', price: 22000 },
+            { id: 'ga-mayo', name: 'Cơm nắm gà mayo', price: 18000 },
+            { id: 'ga-phomai', name: 'Cơm nắm gà phô mai', price: 22000 },
+            { id: 'bo-ham', name: 'Cơm nắm bò hầm', price: 23000 },
+            { id: 'trung-chabong', name: 'Cơm nắm trứng trà bông', price: 16000 },
+            { id: 'ca-ngu', name: 'Cơm nắm cá ngừ', price: 20000 }
         ];
 
         let state = {};
